--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: course-catalog-servie
   datasource:
-    url: jdbc:h2:mem:testDB
+    url: jdbc:h2:mem:dbDev
     driver-class-name: org.h2.Driver
     username: sa
     password: password
