--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,18 +1,33 @@
+#spring:
+#  application:
+#    name: course-catalog-servie
+#  datasource:
+#    url: jdbc:h2:mem:testDB
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password: password
+#  jpa:
+#    database: h2
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    generate-ddl: true
+#    show-sql: true
+#  h2:
+#    console:
+#      enabled: true
+
 spring:
-  application:
-    name: course-catalog-servie
   datasource:
-    url: jdbc:h2:mem:testDB
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
+    url: jdbc:mysql://localhost:3306/CourseCatalogDBTest
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password:
   jpa:
-    database: h2
-    database-platform: org.hibernate.dialect.H2Dialect
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    hibernate:
+      ddl-auto: update
     generate-ddl: true
     show-sql: true
-  h2:
-    console:
-      enabled: true
+
 message: Hello from Kotlin (test)
 id: 1
